crates/carta/tests/snapshots/golden_writer__markdown__common__code-block-trailing-newline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
    first line
    second line
