crates/carta/tests/snapshots/golden_writer__markdown__common__div-admonition.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
::: note
be careful here
:::
