crates/carta/tests/snapshots/golden_writer__markdown__common__footnote-simple.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
ref[^1]

[^1]: the note body
