crates/carta/tests/snapshots/golden_writer__markdown__common__footnote-two.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
x[^1] y[^2]

[^1]: first

[^2]: second
