crates/carta/tests/snapshots/golden_writer__markdown__common__ordered-nested.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
1.  outer

    1.  inner one
    2.  inner two
