crates/carta/tests/snapshots/golden_writer__markdown__common__raw-html-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
text `<cite>`{=html}raw`</cite>`{=html} more
