crates/carta/tests/snapshots/golden_writer__markdown__common__span.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
a [styled]{#s .c data-k="v"} word
